# loom

./: .gitignore  CLAUDE.md  CMakeLists.txt
.claude/commands/: handoff.md
demos/: demo_dump.cpp  demo_errors.cpp
docs/: ARCHITECTURE.md  ARCHIVE.md  PLAN.md  SESSION_LOG.md
docs/research/: loom_doc_specification.md
include/loom/: build_cache.hpp  cache.hpp  config.hpp  error.hpp  git.hpp  glob.hpp  graph.hpp  local_override.hpp  lockfile.hpp  log.hpp  manifest.hpp  name.hpp  project.hpp  resolver.hpp  result.hpp  sha256.hpp  source.hpp  swap.hpp  target_expr.hpp  uuid.hpp  version.hpp  workspace.hpp
include/loom/lang/: ir.hpp  lexer.hpp  parser.hpp  token.hpp  verilog_token.hpp
src/lang/: lexer.cpp  parser.cpp
src/util/: build_cache.cpp  cache.cpp  config.cpp  error.cpp  git.cpp  glob.cpp  local_override.cpp  lockfile.cpp  log.cpp  manifest.cpp  name.cpp  project.cpp  resolver.cpp  sha256.cpp  source.cpp  swap.cpp  target_expr.cpp  uuid.cpp  version.cpp  workspace.cpp
tests/: bench_build_cache.cpp  bench_graph.cpp  bench_lexer.cpp  bench_parser.cpp  test_build_cache.cpp  test_config.cpp  test_git.cpp  test_glob.cpp  test_graph.cpp  test_lexer.cpp  test_local_override.cpp  test_lockfile.cpp  test_log.cpp  test_manifest.cpp  test_name.cpp  test_parser.cpp  test_project.cpp  test_resolver.cpp  test_result.cpp  test_sha256.cpp  test_source.cpp  test_swap.cpp  test_target_expr.cpp  test_uuid.cpp  test_version.cpp  test_workspace.cpp
tests/fixtures/: Loom.toml.example  counter.v  lint_constructs.sv  nested_module.sv  non_ansi_module.v  package_example.sv  simple_module.v  workspace.toml.example
